table gap fix css added to avoid conflicts in oqtane

--- a/scss/components/_list-table.scss
+++ b/scss/components/_list-table.scss
@@ -254,3 +254,11 @@ tfoot {
     }
   }
 }
+
+.quickgrid tbody tr:empty {
+  display: none;
+}
+
+.quickgrid tbody tr td:empty {
+  display: none;
+}
